# rover_trajectory_opt_ros

./: .gitignore  README.md  package.xml
launch/: emergency_stop.launch
rover_trajectory_msgs/: CMakeLists.txt  package.xml
rover_trajectory_msgs/msg/: RoverState.msg  Trajectory.msg  TrajectoryList.msg
rover_trajectory_opt/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rover_trajectory_opt/cfg/: four_rover_trajectory_pub.yaml  mpc_params.yaml  multi_1.yaml  multi_2.yaml  rover_emergency_stop_params.yaml  single_redrover_trajectory_opt.yaml  single_rover_trajectory_opt.yaml  single_rover_trajectory_pub.yaml  two_rover_trajectory_pub.yaml
rover_trajectory_opt/launch/: four_rover_trajectory_pub.launch  mpc.launch  mpc.launch.py  multi_1.launch  multi_2.launch  single_rover_trajectory_opt.launch  single_rover_trajectory_opt.launch.py  single_rover_trajectory_pub.launch  single_rover_trajectory_pub.launch.py  two_rover_trajectory_pub.launch
rover_trajectory_opt/nodes/: follower_mpc_node.py  mpc_node.py  trajectory_generator_node.py  trajectory_publisher_node.py
rover_trajectory_opt/rover_trajectory_opt/: mpc.py  simple_traj_publisher.py  trajectory_generator_node.py  trajectory_publisher_node.py
rover_trajectory_opt/scripts/: create_and_store_trajectories.py  dynus_relay.sh  single_rover.py  single_rover_objs.py  two_rover.py
