<?xml version="1.0"?>
<package format="3">
  <name>rover_trajectory_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for rover trajectory state.</description>

  <maintainer email="masonbp@todo.todo">masonbp</maintainer>
  <license>TODO</license>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
